--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.15.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-vue": "^0.11.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -48,6 +51,8 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
