--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-ui": "^2.15.1",
+    "qs": "^6.10.1",
+    "qs.js": "^0.1.12",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-vue": "^0.11.0",
     "vue": "^2.5.2",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
